add bootstrap rules to vacation-site

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <blockquote class="blockquote">
             <p>"The top places for experts to live in canada are Vancouver, Toronto, Calgary, Momtral, and Ottawa.But fot me i would love to live in Toronto".
                 <span class="bg-success">
-                PLEASE DONT ASK ME WHY></span></p>
+                PLEASE DONT ASK ME WHY</span></p>
             <footer class="blockquote-footer">VACATION TO CANADA</footer>
         </blockquote>
     </div>
